fixed homepage align bug on safari

--- a/static/css/sass.css
+++ b/static/css/sass.css
@@ -520,7 +520,8 @@ input[type=range].MASAS-slider {
     .home--wrapper .multiPage--wrapper #homepage-login .logo {
       width: 100%;
       display: flex;
-      height: 100%;
+      height: -webkit-min-content;
+      height: min-content;
       justify-content: center;
       min-height: 1rem; }
     .home--wrapper .multiPage--wrapper #homepage-login .login-container {
