--- a/static/sass/Home/Home.sass
+++ b/static/sass/Home/Home.sass
@@ -127,7 +127,8 @@
 				display: flex
 				// flex: 1
 				// padding-bottom: 2.5rem
-				height: 100%
+				height: -webkit-min-content
+				height: min-content
 				justify-content: center
 				min-height: 1rem		// apparently fixes bug in chrome (hovering login button caused logo to get smaller)
 
